# postgres-migrations

./: Cargo.toml
embed_migrations/: Cargo.toml
embed_migrations/src/: embed_migrations.rs  lib.rs  migrations.rs
examples/embed_migrations/: main.rs
examples/migrations/20151219180527_create_emails/: up.sql
examples/migrations/20151219180527_create_users/: up.sql
file_migrations/: Cargo.toml
file_migrations/src/: file_migration.rs  lib.rs
migrations_shared/: Cargo.toml
migrations_shared/src/: runner.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  migration.rs  setup_migration_table.sql
src/: lib.rs
